--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "license": "ISC",
   "devDependencies": {
     "lite-server": "2.3"
+  },
+  "dependencies": {
+    "@truffle/contract": "^4.6.22"
   }
 }
