--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lite-server": "2.3"
   },
   "dependencies": {
-    "@truffle/contract": "^4.6.22"
+    "@truffle/contract": "^4.6.22",
+    "truffle-contract": "^4.0.31"
   }
 }
