--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
   },
   "scripts": {
     "dev": "lite-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/uuid": "^9.0.1",
-    "lite-server": "2.3"
+    "chai": "^4.3.7",
+    "lite-server": "2.3",
+    "mocha": "^10.2.0"
   },
   "dependencies": {
     "@truffle/contract": "^4.6.22",
