--- a/webclient/package.json
+++ b/webclient/package.json
@@ -2,21 +2,25 @@
   "name": "webclient",
   "version": "0.1.0",
   "private": true,
+  "main": "truffle.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@truffle/contract": "^4.6.23",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.32",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "crypto-browserify": "^3.12.0",
+    "crypto-js": "^3.1.9-1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "stream": "^0.0.2",
     "stream-browserify": "^3.0.0",
+    "truffle-contract": "^4.0.31",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
