--- a/webclient/package.json
+++ b/webclient/package.json
@@ -18,6 +18,8 @@
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "web3": "^1.10.0"
+    "web3": "^4.0.1",
+    "truffle-contract": "4.0.31"
   },
   "scripts": {
     "start": "react-scripts start",
