--- a/webclient/package.json
+++ b/webclient/package.json
@@ -17,8 +17,7 @@
     "react-scripts": "^2.1.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
-    "web3": "^4.0.1",
-    "truffle-contract": "4.0.31"
+    "web3": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
