--- a/webclient/package.json
+++ b/webclient/package.json
@@ -16,8 +16,7 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "^2.1.3",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "web3": "^4.0.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
